Test/dafny4/git-issue90.dfy.expect
git-issue90.dfy(6,8): Error: recursive constraint dependency involving a newtype: y -> MyInt -> x
1 resolution/type errors detected in git-issue90.dfy
